# Bot-Trading-Binance

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
apps/telegram-bot/: package.json
apps/telegram-bot/src/: main.ts
apps/trading-api/: package.json
apps/trading-api/src/: app.module.ts  health.controller.ts  main.ts
docs/: ai-training.md  api-reference.md  architecture.md  binance-setup.md  docker-deployment.md  environment.md  event-flow.md  installation.md  model.md  paper-trading.md  production-deployment.md  real-trading.md  roadmap.md  security-checklist.md  security.md  telegram-commands.md  telegram-setup.md  testing.md  troubleshooting.md
infra/docker/: docker-compose.yml
infra/postgres/init/: 001_init.sql
libs/application/: package.json
libs/application/src/: index.ts
libs/config/: package.json
libs/config/src/: config.service.ts  env.schema.ts  env.ts  index.ts
libs/domain/: package.json
libs/domain/src/: index.ts
libs/infrastructure/: package.json  tsconfig.json
libs/infrastructure/src/: index.ts
libs/shared/: package.json
services/ai-engine/: pyproject.toml  requirements.txt
services/ai-engine/src/: config.py  main.py
services/ai-engine/src/application/: signal_service.py
services/ai-engine/src/domain/: model_selector.py
services/ai-engine/src/infrastructure/: model_runner.py
services/execution-engine/: package.json
services/market-data-service/: package.json
services/risk-engine/: package.json
services/signal-engine/: package.json
(+38 files in other folders)
