[project]
name = "ai-engine"
version = "0.1.0"
description = "AI engine for trading signals"
requires-python = ">=3.11"

dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.6",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "redis==5.1.1",
  "scikit-learn==1.5.2",
  "xgboost==2.1.1",
  "python-dotenv==1.0.1"
]
